--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -2,33 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RadioGroup
-        android:id="@+id/radioGroup2"
+        android:id="@+id/Hemispheres"
         android:layout_width="175dp"
         android:layout_height="103dp"
         android:layout_marginStart="116dp"
         android:layout_marginTop="135dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+        app:layout_constraintTop_toBottomOf="@+id/Algorithm">
 
         <RadioButton
-            android:id="@+id/radioButton5"
+            android:id="@+id/NorthHemi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Półkula Północna" />
 
         <RadioButton
-            android:id="@+id/radioButton6"
+            android:id="@+id/SouthHemi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Półkula Południowa" />
     </RadioGroup>
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/Algorithm"
         android:layout_width="175dp"
         android:layout_height="138dp"
         android:layout_marginStart="112dp"
@@ -37,25 +38,25 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/SimpleAlgo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Prosty Algorytm" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/ConwayAlgo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Algorytm Conwaya" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/Trig1Algo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Algorytm Trygonometryczny 1" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/Trig2Algo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Algorytm Trygonometryczny 2" />
@@ -69,7 +70,7 @@
         android:layout_marginTop="68dp"
         android:text="Zaakcepuj wybory"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
+        app:layout_constraintTop_toBottomOf="@+id/Hemispheres" />
 
     <Button
         android:id="@+id/returning"
@@ -79,6 +80,26 @@
         android:layout_marginBottom="64dp"
         android:text="Wróc bez zapisywania"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="125dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="26dp"
+        android:text="Wybrany Algorytm:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="125dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="143dp"
+        android:layout_marginBottom="48dp"
+        android:text="Wybrana Półkula:"
+        app:layout_constraintBottom_toTopOf="@+id/Hemispheres"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
