--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,62 +7,65 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="156dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="112dp"
+        android:id="@+id/NextFull"
+        android:layout_width="159dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="36dp"
+        android:text="Następna Pełnia:  "
+        app:layout_constraintBottom_toTopOf="@+id/toFullmoon"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/PrevFull"
+        android:layout_width="158dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="28dp"
+        android:text="Poprzednia Pełnia: "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Today" />
+
+    <TextView
+        android:id="@+id/NextNew"
+        android:layout_width="148dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="36dp"
         android:text="Następny Nów: "
         app:layout_constraintBottom_toTopOf="@+id/toSettingsMain"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="156dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Poprzednia Pełnia: "
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="156dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="20dp"
-        android:text="Poprzedni Nów: "
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/textView5" />
-
-    <TextView
         android:id="@+id/Today"
-        android:layout_width="298dp"
-        android:layout_height="28dp"
+        android:layout_width="311dp"
+        android:layout_height="51dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="57dp"
         android:text="Dzisiaj: 40%"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/blackSun" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="156dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="112dp"
-        android:text="Następna Pełnia:  "
-        app:layout_constraintBottom_toTopOf="@+id/toFullmoon"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:id="@+id/PrevNew"
+        android:layout_width="150dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
+        android:text="Poprzedni Nów: "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Today" />
 
     <Button
         android:id="@+id/toSettingsMain"
         android:layout_width="114dp"
         android:layout_height="55dp"
-        android:layout_marginStart="59dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="20dp"
         android:text="Ustawienia"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -71,10 +74,37 @@
         android:id="@+id/toFullmoon"
         android:layout_width="132dp"
         android:layout_height="59dp"
-        android:layout_marginEnd="59dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="16dp"
         android:text="Wszystkie pełnie w roku"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/blackSun"
+        android:layout_width="254dp"
+        android:layout_height="242dp"
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/Today"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/nw17_5" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="214dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="15dp"
+        android:text="Fazy Księzyca"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/blackSun"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
